fixed css spacing
git-svn-id: svn+ssh://dev/usr/local/svn/public@247 802f62a4-8c4f-0410-9816-caa66071c0a2

--- a/stylesheets/news.css
+++ b/stylesheets/news.css
@@ -1,5 +1,5 @@
 #iframe{
-  padding-top: 3px;
+  padding-top: 0px;
   position: relative;
   left: 33px;
   top: -13px;
